--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" 
+          href="style.css" 
+          media="screen" 
+          charset="utf-8"
+    />
   </head>
   <body>
   <div class="aaa">
@@ -12,7 +16,10 @@
   <div class="centered-main-page-element">
     <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
       <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text"><button>Add</button>
+        <input id="new-task" 
+               class="task" 
+               type="text">
+        <button>Add</button>
       </div>
     </p>
     <h3>Todo</h3>
