--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
     />
   </head>
   <body>
-  <div class="aaa">
-    <img src="./eisenhower-matrix.jpg"> <a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <div class="matrix">
+    <img class="matrix__image" src="./eisenhower-matrix.jpg"> <a class="matrix__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </div>
-  <div class="centered-main-page-element">
-    <p id="topSectionForAddingElementToList"><label for="new-task">Add Item</label>
-      <div class="task-row-wrapper">
+  <div class="main">
+    <p id="topSectionForAddingElementToList" class="main__header"><label for="new-task" class="main__label">Add Item</label>
+      <div class="main__wrapper">
         <input id="new-task" 
-               class="task" 
+               class="main__input" 
                type="text">
-        <button>Add</button>
+        <button class="main__button">Add</button>
       </div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incompleteTasks">
-      <li>
-        <input type="checkbox"><label class="task">Pay Bills</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
+    <h3 class="main__header">Todo</h3>
+    <ul id="incompleteTasks" class="incomplete-list">
+      <li class="incomplete-list__item">
+        <input type="checkbox" class="incomplete-list__checkbox"><label class="incomplete-list__label">Pay Bills</label><input type="text" class="task"><button class="incomplete-list__button edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
       </li>
-      <li class="editMode">
-        <input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="edit">Save</button><button class="delete"><img src="./remove.svg"></button>
+      <li class="incomplete-list__item editMode">
+        <input type="checkbox" class="incomplete-list__checkbox"><label class="incomplete-list__label">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="incomplete-list__button edit" >Save</button><button class="incomplete-list__button delete"><img class="incomplete-list__image" src="./remove.svg"></button>
       </li>
     </ul>
     <h3>Completed</h3>
-    <ul id="completed-tasks">
-      <li>
-        <input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
+    <ul id="completed-tasks" class="completed-list">
+      <li class="completed-list__item">
+        <input type="checkbox" class="completed-list__checkbox" checked><label class="completed-list__label">See the Doctor</label><input type="text" class="task"><button class="completed-list__button edit">Edit</button><button class="completed-list__button delete"><img class="completed-list__image" src="./remove.svg"></button>
       </li>
     </ul>
   </div>
