feat: add alt tags to media according to advanced rule 1.2

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   <body>
   <header class="matrix">
-    <img class="matrix__image" src="./eisenhower-matrix.jpg"> <a class="matrix__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+    <img class="matrix__image" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix description"> <a class="matrix__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
     <section id="topSectionForAddingElementToList" class="main__header">
@@ -27,10 +27,10 @@
     <h3 class="main__header">Todo</h3>
     <ul id="incompleteTasks" class="incomplete-list">
       <li class="incomplete-list__item">
-        <input type="checkbox" class="incomplete-list__checkbox"><label class="incomplete-list__label">Pay Bills</label><input type="text" class="task"><button class="incomplete-list__button edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
+        <input type="checkbox" class="incomplete-list__checkbox"><label class="incomplete-list__label">Pay Bills</label><input type="text" class="task"><button class="incomplete-list__button edit">Edit</button><button class="delete"><img src="./remove.svg" alt="Remove button"></button>
       </li>
       <li class="incomplete-list__item editMode">
-        <input type="checkbox" class="incomplete-list__checkbox"><label class="incomplete-list__label">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="incomplete-list__button edit" >Save</button><button class="incomplete-list__button delete"><img class="incomplete-list__image" src="./remove.svg"></button>
+        <input type="checkbox" class="incomplete-list__checkbox"><label class="incomplete-list__label">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="incomplete-list__button edit" >Save</button><button class="incomplete-list__button delete"><img class="incomplete-list__image" src="./remove.svg" alt="Remove button"></button>
       </li>
     </ul>
     <h3>Completed</h3>
