feat: add alt tags to all media according to advanced rule 1.2

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <h3 class="main__header">Todo</h3>
     <ul id="incompleteTasks" class="incomplete-list">
       <li class="incomplete-list__item">
-        <input type="checkbox" class="incomplete-list__checkbox"><label class="incomplete-list__label">Pay Bills</label><input type="text" class="task"><button class="incomplete-list__button edit">Edit</button><button class="delete"><img src="./remove.svg" alt="Remove button"></button>
+        <input type="checkbox" class="incomplete-list__checkbox"><label class="incomplete-list__label">Pay Bills</label><input type="text" class="task"><button class="incomplete-list__button edit">Edit</button><button class="delete"><img src="./remove.svg" alt="Remove button"  alt="Remove button">></button>
       </li>
       <li class="incomplete-list__item editMode">
         <input type="checkbox" class="incomplete-list__checkbox"><label class="incomplete-list__label">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="incomplete-list__button edit" >Save</button><button class="incomplete-list__button delete"><img class="incomplete-list__image" src="./remove.svg" alt="Remove button"></button>
@@ -36,7 +36,7 @@
     <h3>Completed</h3>
     <ul id="completed-tasks" class="completed-list">
       <li class="completed-list__item">
-        <input type="checkbox" class="completed-list__checkbox" checked><label class="completed-list__label">See the Doctor</label><input type="text" class="task"><button class="completed-list__button edit">Edit</button><button class="completed-list__button delete"><img class="completed-list__image" src="./remove.svg"></button>
+        <input type="checkbox" class="completed-list__checkbox" checked><label class="completed-list__label">See the Doctor</label><input type="text" class="task"><button class="completed-list__button edit">Edit</button><button class="completed-list__button delete"><img class="completed-list__image" src="./remove.svg"  alt="Remove button">></button>
       </li>
     </ul>
   </main>
