--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
           charset="utf-8"
     />
   </head>
-  <body>
+  <body class="page">
   <header class="matrix">
     <img class="matrix__image" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix description"> <a class="matrix__link" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="main">
-    <section id="topSectionForAddingElementToList" class="main__header">
-      <label for="new-task" class="main__label">Add Item</label>
+    <section id="topSectionForAddingElementToList" class="main__section">
+      <label for="new-task" class="main__header">Add Item</label>
       <div class="main__wrapper">
         <input id="new-task" 
                class="main__input" 
@@ -27,16 +27,28 @@
     <h3 class="main__header">Todo</h3>
     <ul id="incompleteTasks" class="incomplete-list">
       <li class="incomplete-list__item">
-        <input type="checkbox" class="incomplete-list__checkbox"><label class="incomplete-list__label">Pay Bills</label><input type="text" class="task"><button class="incomplete-list__button edit">Edit</button><button class="delete"><img src="./remove.svg" alt="Remove button"  alt="Remove button">></button>
+        <input type="checkbox" class="incomplete-list__checkbox">
+        <label class="incomplete-list__label">Pay Bills</label>
+        <input type="text" class="incomplete-list__input">
+        <button class="incomplete-list__button__edit">Edit</button>
+        <button class="incomplete-list__button__delete"><img class="incomplete-list__image" src="./remove.svg" alt="Remove button"></button>
       </li>
       <li class="incomplete-list__item editMode">
-        <input type="checkbox" class="incomplete-list__checkbox"><label class="incomplete-list__label">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="incomplete-list__button edit" >Save</button><button class="incomplete-list__button delete"><img class="incomplete-list__image" src="./remove.svg" alt="Remove button"></button>
+        <input type="checkbox" class="incomplete-list__checkbox">
+        <label class="incomplete-list__label">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="incomplete-list__input">
+        <button class="incomplete-list__button__edit" >Save</button>
+        <button class="incomplete-list__button__delete"><img class="incomplete-list__image" src="./remove.svg" alt="Remove button"></button>
       </li>
     </ul>
-    <h3>Completed</h3>
+    <h3 class="main__header">Completed</h3>
     <ul id="completed-tasks" class="completed-list">
       <li class="completed-list__item">
-        <input type="checkbox" class="completed-list__checkbox" checked><label class="completed-list__label">See the Doctor</label><input type="text" class="task"><button class="completed-list__button edit">Edit</button><button class="completed-list__button delete"><img class="completed-list__image" src="./remove.svg"  alt="Remove button">></button>
+        <input type="checkbox" class="completed-list__checkbox" checked>
+        <label class="completed-list__label">See the Doctor</label>
+        <input type="text" class="completed-list__input">
+        <button class="completed-list__button__edit">Edit</button>
+        <button class="completed-list__button__delete"><img class="completed-list__image" src="./remove.svg"  alt="Remove button"></button>
       </li>
     </ul>
   </main>
