fix: change id and classes to laconical names according to rule 3.3

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <button class="task-list__button__edit">Edit</button>
         <button class="task-list__button__delete"><img class="task-list__image" src="./remove.svg" alt="Remove button"></button>
       </li>
-      <li class="task-list__item editMode">
+      <li class="task-list__item item__edit-mode">
         <input type="checkbox" class="task-list__checkbox">
         <label class="task-list__label">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task-list__input">
