--- a/index.html
+++ b/index.html
@@ -30,15 +30,15 @@
         <input type="checkbox" class="task-list__checkbox">
         <label class="task-list__label">Pay Bills</label>
         <input type="text" class="task-list__input">
-        <button class="task-list__button__edit">Edit</button>
-        <button class="task-list__button__delete"><img class="task-list__image" src="./remove.svg" alt="Remove button"></button>
+        <button class="task-list__edit-button">Edit</button>
+        <button class="task-list__delete-button"><img class="task-list__image" src="./remove.svg" alt="Remove button"></button>
       </li>
-      <li class="task-list__item item__edit-mode">
+      <li class="task-list__item task-list__item__edit-mode">
         <input type="checkbox" class="task-list__checkbox">
         <label class="task-list__label">Go Shopping</label>
         <input type="text" value="Go Shopping" class="task-list__input">
-        <button class="task-list__button__edit" >Save</button>
-        <button class="task-list__button__delete"><img class="task-list__image" src="./remove.svg" alt="Remove button"></button>
+        <button class="task-list__edit-button" >Save</button>
+        <button class="task-list__delete-button"><img class="task-list__image" src="./remove.svg" alt="Remove button"></button>
       </li>
     </ul>
     <h3 class="main__header">Completed</h3>
@@ -47,8 +47,8 @@
         <input type="checkbox" class="task-list__checkbox" checked>
         <label class="task-list__label">See the Doctor</label>
         <input type="text" class="task-list__input">
-        <button class="task-list__button__edit">Edit</button>
-        <button class="task-list__button__delete"><img class="task-list__image" src="./remove.svg"  alt="Remove button"></button>
+        <button class="task-list__edit-button">Edit</button>
+        <button class="task-list__delete-button"><img class="task-list__image" src="./remove.svg"  alt="Remove button"></button>
       </li>
     </ul>
   </main>
