fix: add unified id for lists according to rule 3.1

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
       </section>
       <h3 class="main__header">Todo</h3>
-      <ul id="incomplete-task" class="task-list">
+      <ul id="task-list__incompleted" class="task-list">
         <li class="task-list__item">
           <input type="checkbox" class="task-list__checkbox">
           <label class="task-list__label">Pay Bills</label>
@@ -42,7 +42,7 @@
         </li>
       </ul>
       <h3 class="main__header">Completed</h3>
-      <ul id="complete-task" class="task-list">
+      <ul id="task-list__completed" class="task-list">
         <li class="task-list__item">
           <input type="checkbox" class="task-list__checkbox" checked>
           <label class="task-list__label">See the Doctor</label>
