--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </header>
     <main class="main">
       <section id="main__section" class="main__section">
-        <label for="new-task" class="main__header">Add Item</label>
+        <h3 for="new-task" class="main__header">Add Item</h3>
         <div class="main__wrapper">
           <input id="new-task" 
                  class="main__input" 
