--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           <button class="task-list__edit-button">Edit</button>
           <button class="task-list__delete-button"><img class="task-list__image" src="./remove.svg" alt="Remove button"></button>
         </li>
-        <li class="task-list__item edit-mode">
+        <li class="task-list__item task-list__item_edit-mode">
           <input type="checkbox" class="task-list__checkbox">
           <label class="task-list__label">Go Shopping</label>
           <input type="text" value="Go Shopping" class="task-list__input">
